# Operating-System-Lab

./: README.md
Code/0x00/: Cargo.toml  Makefile  ysos.py
Code/0x00/pkg/boot/src/: main.rs
Code/0x01/: .gdbinit  .gitignore  Cargo.toml
Code/0x01/pkg/boot/src/: main.rs
Code/0x01/pkg/kernel/src/: lib.rs
Code/0x02/: .gdbinit  Cargo.toml
Code/0x02/pkg/elf/src/: lib.rs
Code/0x02/pkg/kernel/config/: boot.conf
Code/0x02/pkg/kernel/src/: lib.rs  main.rs
Code/0x03/: Cargo.toml
Code/0x03/pkg/boot/src/: config.rs  lib.rs  main.rs
Code/0x03/pkg/kernel/: Cargo.toml
Code/0x03/pkg/kernel/src/: lib.rs
Code/0x04/: .gitignore
Code/0x04/pkg/app/factorial/: Cargo.toml
Code/0x04/pkg/app/shell/: Cargo.toml
Code/0x04/pkg/boot/src/: config.rs  fs.rs  lib.rs
Code/0x04/pkg/kernel/src/: lib.rs  main.rs
Code/0x05/: .gdbinit
Code/0x05/pkg/kernel/: Cargo.toml
Code/0x06/: .gitignore  Cargo.toml
Code/0x06/pkg/kernel/: Cargo.toml
Code/0x07/: Makefile
Code/0x07/pkg/kernel/: Cargo.toml
Code/0x07/pkg/kernel/config/: boot.conf
Code/0x07/pkg/kernel/src/: lib.rs
Code/0x07/pkg/kernel/src/drivers/: filesystem.rs
Code/0x07/pkg/kernel/src/drivers/ata/: bus.rs  mod.rs
Code/0x07/pkg/kernel/src/interrupt/: serial.rs
Code/0x07/pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
Code/0x07/pkg/kernel/src/memory/: frames.rs  mod.rs
Code/0x07/pkg/kernel/src/proc/: context.rs  manager.rs  mod.rs  process.rs
Code/0x07/pkg/kernel/src/proc/vm/: heap.rs  mod.rs  stack.rs
Code/0x07/pkg/kernel/src/utils/: logger.rs
Code/0x07/pkg/lib/: Cargo.toml
(+111 files in other folders)
