[package]
name = "ysos_kernel"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true }
lazy_static = { workspace = true }
uefi = { workspace = true }
crossbeam-queue = { workspace = true }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
bit_field = { workspace = true }
libm = { workspace = true }
linked_list_allocator = { workspace = true }
volatile = "0.4.6"
elf = { path = "../elf", package = "ysos_elf" }
xmas-elf = { workspace = true }
ysos_syscall = { path = "../syscall" } # 添加 syscall 定义包 (修正包名)
storage = { package = "ysos_storage", path = "../storage" }